--- a/used.html
+++ b/used.html
@@ -6,7 +6,7 @@
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Catchy Carz Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Next Carz Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -70,7 +70,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								 </ul>
 							   </li>
 							   <li><a href="insurance.html">Insurance</a></li>
-							 <li><a href="app.html">Catchy Carz app</a><li>
+							 <li><a href="app.html">Next Carz app</a><li>
 						   </ul>
 						   <div id="sidebar-btn">
 							   <span></span>
@@ -182,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="clearfix"></div>
 		    <!--banner-info-->
 			<div class="banner-info">
-			  <h1><a href="index.html">Catchy <span class="logo-sub">Carz</span> </a></h1>
+			  <h1><a href="index.html">Next  <span class="logo-sub">Carz</span> </a></h1>
 			    <h2><span>COME LOOK </span> <span>AT THE SELECTION! </span></h2>
 				<p>Eye it – try it – buy it!</p>
 			     
@@ -198,7 +198,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>	
 								<div class="discount">
 									<h3>Get Offers & Discount of</h3>
-									<p>Catchy Carz Brand VL in New York</p>
+									<p>Next Carz Brand VL in New York</p>
 										<form action="#" method="post">
 											<select id="country5" onchange="change_country(this.value)" class="frm-field required">
 												<option selected="selected" value="-1">-Buying Time Period-</option>
@@ -451,7 +451,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f1.jpg" alt="Catchy Carz">
+													<img src="images/f1.jpg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="single.html">Mercedes-Benz C250 CDI</a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 8000 - $ 12000</span></div>
@@ -505,7 +505,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f2.jpg" alt="Catchy Carz">
+													<img src="images/f2.jpg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="single.html">Audi A4 2.0 TDI</a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 6000 - $ 10000</span></div>
@@ -559,7 +559,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f3.jpg" alt="Catchy Carz">
+													<img src="images/f3.jpg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="single.html">Foed Mustang GT 500</a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 9000 - $ 12000</span></div>
@@ -618,7 +618,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f4.jpg" alt="Catchy Carz">
+													<img src="images/f4.jpg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="single.html"> Ford Mustang GT 350</a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 8000 - $ 11000</span></div>
@@ -633,7 +633,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__back">
 									  <span class="card__text">
 									     	 <div class="login-inner2">
-												<h4><img src="images/rupee.png" alt="Catchy Carz"> Check On-Road Price</h4>
+												<h4><img src="images/rupee.png" alt="Next Carz"> Check On-Road Price</h4>
 											<div class="login-top sign-top">
 												 <form action="#" method="post">
 													<input type="text" name="name" class="name active" placeholder="Name" required="">
@@ -674,7 +674,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f5.jpeg" alt="Catchy Carz">
+													<img src="images/f5.jpeg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="#">Ferrari F430</a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 7000 - $ 13000</span></div>
@@ -689,7 +689,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__back">
 									  <span class="card__text">
 									     	 <div class="login-inner2">
-												<h4><img src="images/rupee.png" alt="Catchy Carz">  Check On-Road Price</h4>
+												<h4><img src="images/rupee.png" alt="Next Carz">  Check On-Road Price</h4>
 											<div class="login-top sign-top">
 												 <form action="#" method="post">
 													<input type="text" name="name" class="name active" placeholder="Name" required="">
@@ -729,7 +729,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f6.jpeg" alt="Catchy Carz">
+													<img src="images/f6.jpeg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="single.html"> Mercedes-Benz C250 CDI</a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 5000 - $ 10000</span></div>
@@ -744,7 +744,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__back">
 									  <span class="card__text">
 									     	 <div class="login-inner2">
-												<h4><img src="images/rupee.png" alt="Catchy Carz">  Check On-Road Price</h4>
+												<h4><img src="images/rupee.png" alt="Next Carz">  Check On-Road Price</h4>
 											<div class="login-top sign-top">
 											   <form action="#" method="post">
 													<input type="text" name="name" class="name active" placeholder="Name" required="">
@@ -789,7 +789,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f7.jpg" alt="Catchy Carz">
+													<img src="images/f7.jpg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="single.html">BMW M4</a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 6000 - $ 11000</span></div>
@@ -804,7 +804,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__back">
 									  <span class="card__text">
 									     	 <div class="login-inner2">
-												<h4><img src="images/rupee.png" alt="Catchy Carz"> Check On-Road Price</h4>
+												<h4><img src="images/rupee.png" alt="Next Carz"> Check On-Road Price</h4>
 											<div class="login-top sign-top">
 												 <form action="#" method="post">
 													<input type="text" name="name" class="name active" placeholder="Name" required="">
@@ -843,7 +843,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f8.jpg" alt="Catchy Carz">
+													<img src="images/f8.jpg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="single.html"> BMW X4 M Sport</a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 7000 - $ 12000</span></div>
@@ -858,7 +858,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__back">
 									  <span class="card__text">
 									     	 <div class="login-inner2">
-												<h4><img src="images/rupee.png" alt="Catchy Carz">  Check On-Road Price</h4>
+												<h4><img src="images/rupee.png" alt="Next Carz">  Check On-Road Price</h4>
 											<div class="login-top sign-top">
 												 <form action="#" method="post">
 													<input type="text" name="name" class="name active" placeholder="Name" required="">
@@ -897,7 +897,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__front">
 									  <span class="card__text">
 									       <div class="img-grid">
-													<img src="images/f9.jpg" alt="Catchy Carz">
+													<img src="images/f9.jpg" alt="Next Carz">
 													<div class="car_description">
 														 <h4><a href="single.html">BMW M3 </a></h4>
 														 <div class="price"><span class="fa fa-rupee"></span><span class="font25">&nbsp;$ 5000 - $ 10000</span></div>
@@ -912,7 +912,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="card__back">
 									  <span class="card__text">
 									     	 <div class="login-inner2">
-												<h4><img src="images/rupee.png" alt="Catchy Carz">  Check On-Road Price</h4>
+												<h4><img src="images/rupee.png" alt="Next Carz">  Check On-Road Price</h4>
 											<div class="login-top sign-top">
 											 <form action="#" method="post">
 													<input type="text" name="name" class="name active" placeholder="Name" required="">
@@ -960,7 +960,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				  <ul class="cities-grids">
 				    <li>
 					  <div class="view two second-effect">
-						<a href="cars.html" title="Catchy Carz">
+						<a href="cars.html" title="Next Carz">
 							<img src="images/b1.jpg" alt="" class="img-responsive">
 							   <div class="mask">
 
@@ -971,7 +971,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </li>
 					 <li>
 					  <div class="view two second-effect">
-						<a href="cars.html" title="Catchy Carz">
+						<a href="cars.html" title="Next Carz">
 							<img src="images/b2.jpg" alt="" class="img-responsive">
 							   <div class="mask">
 									<p>Buick <span>Skylark </span> </p>
@@ -981,7 +981,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </li>
 					 <li>
 					  <div class="view two second-effect">
-						<a href="cars.html" title="Catchy Carz">
+						<a href="cars.html" title="Next Carz">
 							<img src="images/b3.jpg" alt="" class="img-responsive">
 							   <div class="mask">
 									<p>Dodge <span>Challenger </span> </p>
@@ -991,7 +991,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </li>
 					 <li>
 					  <div class="view two second-effect">
-						<a href="cars.html" title="Catchy Carz">
+						<a href="cars.html" title="Next Carz">
 							<img src="images/b4.jpg" alt="" class="img-responsive">
 							   <div class="mask">
 									<p>BMW X4 M <span>Sport</span> </p>
@@ -1001,7 +1001,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </li>
 					 <li>
 					  <div class="view two second-effect">
-						<a href="cars.html" title="Catchy Carz">
+						<a href="cars.html" title="Next Carz">
 							<img src="images/b5.jpg" alt="" class="img-responsive">
 							   <div class="mask">
 									<p>Ford <span>GT40</span> </p>
@@ -1011,7 +1011,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </li>
 					 <li>
 					  <div class="view two second-effect">
-						<a href="single.html" title="Catchy Carz">
+						<a href="single.html" title="Next Carz">
 							<img src="images/b6.jpg" alt="" class="img-responsive">
 							   <div class="mask two">
 									<p>Lambo<span>rghini</span> </p>
@@ -1021,7 +1021,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </li>
 					   <li>
 					  <div class="view two second-effect">
-						<a href="cars.html" title="Catchy Carz">
+						<a href="cars.html" title="Next Carz">
 							<img src="images/b7.jpg" alt="" class="img-responsive">
 							   <div class="mask">
 									<p>Acura <span>TLX</span> </p>
@@ -1031,7 +1031,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </li>
 					 <li>
 					  <div class="view two second-effect">
-						<a href="cars.html" title="Catchy Carz">
+						<a href="cars.html" title="Next Carz">
 							<img src="images/b9.jpg" alt="" class="img-responsive">
 							   <div class="mask">
 									<p>Audi <span>R8 V10</span> </p>
@@ -1041,7 +1041,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </li>
 					 <li>
 					  <div class="view two second-effect">
-						<a href="cars.html" title="Catchy Carz">
+						<a href="cars.html" title="Next Carz">
 							<img src="images/b8.jpg" alt="" class="img-responsive">
 							   <div class="mask">
 									<p>BMW  <span>Z4 </span> </p>
@@ -1187,7 +1187,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="footer-grid-sub-grid-right">
 							<h4><a href="single.html">Quis autem vel eum iure</a></h4>
-							<p>Posted On 25/5/2016</p>
+							<p>Posted On 25/5/2023</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -1195,10 +1195,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</div>
 			<div class="footer-logo animated wow slideInUp" data-wow-delay=".5s">
-				<h2><a href="index.html">Catchy Carz <span>Eye it – try it – buy it!</span></a></h2>
+				<h2><a href="index.html">Next Carz <span>Eye it – try it – buy it!</span></a></h2>
 			</div>
 			<div class="copy-right animated wow slideInUp" data-wow-delay=".5s">
-				<p>&copy 2016 Catchy Carz. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>&copy 2023 NexTash. All rights reserved | Design by <a href="https://store.nextash.com/">NexTash</a></p>
 			</div>
 		</div>
 	</div>
