--- a/upcoming.html
+++ b/upcoming.html
@@ -6,7 +6,7 @@
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Catchy Carz Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Next Carz Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -70,7 +70,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								 </ul>
 							   </li>
 							   <li><a href="insurance.html">Insurance</a></li>
-							 <li><a href="app.html">Catchy Carz app</a><li>
+							 <li><a href="app.html">Next Carz app</a><li>
 						   </ul>
 						   <div id="sidebar-btn">
 							   <span></span>
@@ -182,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="clearfix"></div>
 		    <!--banner-info-->
 			<div class="banner-info">
-			  <h1><a href="index.html">Catchy <span class="logo-sub">Carz</span> </a></h1>
+			  <h1><a href="index.html">Next  <span class="logo-sub">Carz</span> </a></h1>
 			    <h2><span>COME LOOK </span> <span>AT THE SELECTION! </span></h2>
 				<p>Eye it – try it – buy it!</p>
 			     
@@ -198,7 +198,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>	
 								<div class="discount">
 									<h3>Get Offers & Discount of</h3>
-									<p>Catchy Carz Brand VL in New York</p>
+									<p>Next Carz Brand VL in New York</p>
 										<form action="#" method="post">
 											<select id="country5" onchange="change_country(this.value)" class="frm-field required">
 												<option selected="selected" value="-1">-Buying Time Period-</option>
@@ -655,7 +655,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="footer-grid-sub-grid-right">
 							<h4><a href="single.html">Quis autem vel eum iure</a></h4>
-							<p>Posted On 25/5/2016</p>
+							<p>Posted On 25/5/2023</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -663,10 +663,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</div>
 			<div class="footer-logo animated wow slideInUp" data-wow-delay=".5s">
-				<h2><a href="index.html">Catchy Carz <span>Eye it – try it – buy it!</span></a></h2>
+				<h2><a href="index.html">Next Carz <span>Eye it – try it – buy it!</span></a></h2>
 			</div>
 			<div class="copy-right animated wow slideInUp" data-wow-delay=".5s">
-				<p>&copy 2016 Catchy Carz. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>&copy 2023 NexTash. All rights reserved | Design by <a href="https://store.nextash.com/">NexTash</a></p>
 			</div>
 		</div>
 	</div>
